# jogo-da-velha

./: .gitignore  README.md
python/: mkdocs.yml  pyproject.toml
python/docs/: firstversion.md  index.md  secondversion.md  thirdversion.md
python/jogo da velha/: main.py
