[tool.poetry]
name = "jogo da velha"
version = "0.1.0"
description = "Implementação do Jogo da Velha"
authors = ["Dionilton <dionilton.os@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
mkdocs = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
